<resources>
    <string name="app_name">Empire Trips</string>
    <string name="item_list_arrow_content_description">Trip direction</string>
    <string name="item_list_pilot_icon_content_description">Pilot photo</string>
    <string name="generic_error">Beautiful generic error</string>
    <string name="no_network_error">Beautiful network error</string>
    <string name="trip_details_pick_up_image_content_description">Pickup location image</string>
    <string name="trip_details_drop_off_image_content_description">Drop off location image</string>
    <string name="fragment_details_pilot_icon_content_description">@string/item_list_pilot_icon_content_description</string>
    <string name="fragment_details_pick_up_label">Departure</string>
    <string name="fragment_details_drop_off_label">Arrival</string>
    <string name="fragment_details_distance_label">Trip Distance</string>
    <string name="fragment_details_distance_number">%s %s</string>
    <string name="fragment_details_duration_label">Trip Duration</string>
    <string name="fragment_details_rating_label">Pilot Rating</string>
    <string name="fragment_details_no_rating_label">user didn’t rate yet</string>
    <string name="generic_error_message">An error has occurred</string>
    <string name="generic_error_retry_button">@string/retry</string>
    <string name="retry">retry</string>
    <string name="no_network_message">No network Connection</string>
    <string name="no_network_retry_button">retry</string>
    <string name="fragment_trips_list_screen_title">Last Trips</string>
</resources>
