<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <include layout="@layout/fragment_trip_details_toolbar" />

    <include
        android:id="@+id/generic_error_layout"
        layout="@layout/generic_error_layout"
        android:visibility="gone" />

    <include
        android:id="@+id/network_error_layout"
        layout="@layout/network_error_layout"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/trip_details_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/fragment_details_pilot_avatar"
                android:layout_width="@dimen/avatar_list_size"
                android:layout_height="@dimen/avatar_list_size"
                android:layout_margin="@dimen/large_margin"
                android:contentDescription="@string/item_list_pilot_icon_content_description"
                app:layout_constraintBottom_toTopOf="@+id/fragment_details_pilot_avatar_separator"
                app:layout_constraintEnd_toStartOf="@id/fragment_details_pilot_name"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/fragment_details_pilot_name"
                style="@style/WhiteTitle.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                app:layout_constraintBottom_toBottomOf="@id/fragment_details_pilot_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/fragment_details_pilot_avatar"
                app:layout_constraintTop_toTopOf="@id/fragment_details_pilot_avatar"
                tools:text="Ackbar" />

            <View
                android:id="@+id/fragment_details_pilot_avatar_separator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/fragment_details_pick_up_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_details_pilot_avatar" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/fragment_details_vertical_separator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />


            <TextView
                android:id="@+id/fragment_details_pick_up_label"
                style="@style/ItemListBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:text="@string/fragment_details_pick_up_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/fragment_details_vertical_separator"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/fragment_details_pick_up_location_name"
                style="@style/WhiteTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:ellipsize="end"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="@id/fragment_details_vertical_separator"
                app:layout_constraintEnd_toStartOf="@+id/fragment_details_vertical_separator"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/fragment_details_pick_up_label"
                app:layout_constraintTop_toBottomOf="@+id/fragment_details_pick_up_label"
                tools:text="Naboo" />

            <TextView
                android:id="@+id/fragment_details_pick_up_time"
                style="@style/ItemListBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:ellipsize="end"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/fragment_details_vertical_separator"
                app:layout_constraintEnd_toStartOf="@+id/fragment_details_vertical_separator"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/fragment_details_pick_up_label"
                app:layout_constraintTop_toBottomOf="@id/fragment_details_pick_up_location_name"

                tools:text="2:12 PM" />

            <TextView
                android:id="@+id/fragment_details_drop_off_label"
                style="@style/ItemListBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:text="@string/fragment_details_drop_off_label"
                app:layout_constraintBottom_toBottomOf="@id/fragment_details_pick_up_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/fragment_details_vertical_separator"
                app:layout_constraintTop_toTopOf="@id/fragment_details_pick_up_label" />

            <TextView
                android:id="@+id/fragment_details_drop_off_location_name"
                style="@style/WhiteTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                app:layout_constraintBottom_toBottomOf="@id/fragment_details_pick_up_location_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/fragment_details_vertical_separator"
                app:layout_constraintTop_toTopOf="@id/fragment_details_pick_up_location_name"
                tools:text="Coruscant" />

            <TextView
                android:id="@+id/fragment_details_drop_off_time"
                style="@style/ItemListBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/fragment_details_pick_up_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/fragment_details_vertical_separator"
                app:layout_constraintTop_toTopOf="@id/fragment_details_pick_up_time"
                tools:text="7:35 PM" />

            <TextView
                android:id="@+id/fragment_details_distance_label"
                style="@style/ItemListBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:text="@string/fragment_details_distance_label"
                app:layout_constraintEnd_toStartOf="@id/fragment_details_vertical_separator"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/fragment_details_pilot_avatar"
                app:layout_constraintTop_toBottomOf="@id/fragment_details_pick_up_time" />

            <TextView
                android:id="@+id/fragment_details_distance"
                style="@style/WhiteTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintEnd_toStartOf="@id/fragment_details_vertical_separator"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/fragment_details_pilot_avatar"
                app:layout_constraintTop_toBottomOf="@id/fragment_details_distance_label"
                tools:text="@string/fragment_details_distance_number" />

            <TextView
                style="@style/ItemListBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:text="@string/fragment_details_duration_label"
                app:layout_constraintBottom_toBottomOf="@id/fragment_details_distance_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/fragment_details_vertical_separator"
                app:layout_constraintTop_toTopOf="@id/fragment_details_distance_label" />

            <TextView
                android:id="@+id/fragment_details_duration"
                style="@style/WhiteTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                app:layout_constraintBottom_toBottomOf="@id/fragment_details_distance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/fragment_details_vertical_separator"
                app:layout_constraintTop_toTopOf="@id/fragment_details_distance"
                tools:text="5:23:47" />

            <TextView
                android:id="@+id/fragment_details_rating_label"
                style="@style/ItemListBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:text="@string/fragment_details_rating_label"
                app:layout_constraintEnd_toEndOf="@id/fragment_details_vertical_separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_details_distance" />

            <TextView
                android:id="@+id/fragment_details_pilot_no_rating"
                style="@style/ItemListBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="36dp"
                android:text="@string/fragment_details_no_rating_label"
                android:textAllCaps="true"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/fragment_details_pilot_avatar"
                app:layout_constraintTop_toBottomOf="@id/fragment_details_rating_label" />

            <RatingBar
                android:id="@+id/fragment_details_pilot_rating"
                style="@style/StarsRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/large_margin"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/fragment_details_pilot_avatar"
                app:layout_constraintTop_toBottomOf="@id/fragment_details_rating_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>